# tree_decorator

./: .fdignore  CHANGELOG.md  Cargo.toml  README.md
src/: decorator_builder.rs  element_handler.rs  lib.rs  macros.rs  standard_decorator.rs
src/decorator/: mod.rs  style.rs  style_item_value.rs
src/macros/: log.rs  mod.rs
tests/: test_items_level.rs  test_log.rs  test_multiple_nested_levels.rs  test_no_handler_output.rs  test_output.rs
